Agentforce/force-app/main/default/objects/Enquiry__c/Enquiry__c.object-meta.xml
<CustomObject>
    <description>AD-967 - Create Enquiry object to store form entires via Pardot</description>
    <label>Enquiry</label>
    <nameField>
        <displayFormat>ENQ-{000000}</displayFormat>
        <label>Enquiry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enquiries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>