Agentforce/force-app/main/default/objects/Enquiry__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <description>AD-967 - Stores the Campaign that this Enquiry has been created for. Taken from either Lead or Contact</description>
    <label>Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>