Agentforce/force-app/main/default/objects/Enquiry__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>AD-967 - Stores the Country for this Enquiry</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>