Agentforce/force-app/main/default/objects/Enquiry__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>AD-967 - Stores the details of this Enquiry</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>