Agentforce/force-app/main/default/objects/Enquiry__c/fields/Enquiry_Service__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Service__c</fullName>
    <label>Enquiry Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Enquiry_Service</valueSetName>
    </valueSet>
</CustomField>