Agentforce/force-app/main/default/objects/Enquiry__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-967 - Denotes the Lead that this enquiry has been generated for</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Enquiries</relationshipLabel>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>