Agentforce/force-app/main/default/objects/Enquiry__c/fields/OwnerCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>OwnerCaseSafeID__c</fullName>
    <formula>CASESAFEID( OwnerId )</formula>
    <label>OwnerCaseSafeID</label>
    <type>Text</type>
</CustomField>