Agentforce/force-app/main/default/objects/Enquiry__c/fields/Service_Required__c.field-meta.xml
<CustomField>
    <fullName>Service_Required__c</fullName>
    <description>AD-967 - Stores the Primary Service against the Enquiry</description>
    <label>Service Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Family</valueSetName>
    </valueSet>
</CustomField>