Agentforce/force-app/main/default/objects/Enquiry__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>AD-1012 - Track the status of the Enquiry record</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Revisit</fullName>
            </value>
            <value>
                <fullName>Closed - Converted</fullName>
            </value>
            <value>
                <fullName>Closed - Not Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>