Agentforce/force-app/main/default/objects/Enquiry__c/listViews/Automotive_Netherlands_Lead_Management_Enquiry.listView-meta.xml
<ListView>
    <fullName>Automotive_Netherlands_Lead_Management_Enquiry</fullName>
    <filterScope>Queue</filterScope>
    <label>Automotive - Netherlands Lead Management</label>
    <queue>Automotive_Netherlands_Lead_Management</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>