Agentforce/force-app/main/default/objects/Enquiry__c/listViews/Automotive_Poland_Lead_Management_Enquiry.listView-meta.xml
<ListView>
    <fullName>Automotive_Poland_Lead_Management_Enquiry</fullName>
    <filterScope>Queue</filterScope>
    <label>Automotive - Poland - Lead Management</label>
    <queue>Automotive_Poland_Lead_Management</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>