Agentforce/force-app/main/default/objects/Enquiry__c/listViews/Facilities_Australia_Lead_Management_Enquiry.listView-meta.xml
<ListView>
    <fullName>Facilities_Australia_Lead_Management_Enquiry</fullName>
    <filterScope>Queue</filterScope>
    <label>Facilities - Australia - Lead Management</label>
    <queue>Facilities_Australia_Lead_Management</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>